Bug 1900172 - Workaround nsIFile.fileSize stat cache after folder compaction. r=babolivier

Differential Revision: https://phabricator.services.mozilla.com/D212646

--HG--
extra : amend_source : 20d68e35cabb062c33cbc5c5ff0a7a949eff3c4a